--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
   <head>
       <title>Epic Quartz Parchment Shears</title>
-      <!-- Link CSS here -->
-      <link href='/css/style.css' rel='stylesheet'>
+      <!-- Font here -->
+      <link href="https://goo.gl/TRlJIe" rel="stylesheet">
       <!-- Link JQuery here -->
-      <script src='/js/jquery-3.2.1.js'></script>
+      <script src='js/jquery-3.2.1.js'></script>
       <!-- Link Javascript File here -->
       <script src="js/script.js"></script>
       <!-- Latest compiled and minified Bootstrap CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+      <!-- Link CSS here -->
+      <link href='css/style.css' rel='stylesheet'>
   </head>
 
   <body>
@@ -22,13 +24,25 @@
         5. Add divs to record User Choice and Computer Choice.
         6. Add a div to record the Winner.
      -->
-    <div class="container text-center">
-      <p></p>
-
-
-    
+    <div class="row">
+      <div class='col-md-12'>
+        <h1>Epic Quartz Parchment Shears</h1>
+        <p>Welcome to za most epic "Quartz Parchment Shears" in history, wisely select your choice to endure the long journey that awaits you.</p>
+        <h1>-- Pick a weapon if you want to live --</h1>
+      </div>
     </div>
-
+    <div class="row">
+      <div class='col-md-3'>
+        <img src='img/quartz.png'>
+      </div>
+      <div class='col-md-3'>
+        <img src='img/parchment.png'>
+      </div>
+      <div class='col-md-3'>
+        <img src='img/shears.png'>
+      </div>
+    </div>
+    
   </body>
 
 </html>
