--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-      <title>Epic Quartz Parchment Shears</title>
+      <title>Epic Quartz Parchment Shears (</title>
       <!-- Font here -->
       <link href="https://goo.gl/TRlJIe" rel="stylesheet">
       <!-- Link JQuery here -->
@@ -31,18 +31,31 @@
         <h1>-- Pick a weapon if you want to live --</h1>
       </div>
     </div>
+    <!-- Images -->
     <div class="row">
-      <div class='col-md-3'>
-        <img src='img/quartz.png'>
+      <div class='col-md-4'>
+        <img class='thumbnail' src='img/quartz.png'>
+        <div class='caption'>
+          <p>" A solid mineral with a crystaline molecular structure "</p>
+        </div>
       </div>
-      <div class='col-md-3'>
-        <img src='img/parchment.png'>
+      <div class='col-md-4'>
+        <img class='thumbnail' src='img/parchment.png'>
+        <div class='caption'>
+          <p>" A flat writting material containing all the secrets "</p>
+        </div>
       </div>
-      <div class='col-md-3'>
-        <img src='img/shears.png'>
+      <div class='col-md-4'>
+        <img class='thumbnail' src='img/shears.png'>
+        <p>" A mysterious cutting device sent form the future "</p>
       </div>
     </div>
-    
+    <!-- Input -->
+    <div class='row'>
+      <div class='col-md-12'>
+        <input name='Weapon'><button>Fight!</button>
+      </div>  
+    </div>
   </body>
 
 </html>
