--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Input -->
     <div class='row'>
       <div class='col-md-12'>
-        <input name='Weapon'><button>Fight!</button>
+        <input id='input'><button id='select'>Fight!</button>
       </div>  
     </div>
   </body>
