--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-      <title>Epic Quartz Parchment Shears (</title>
+      <title>Epic Quartz Parchment Shears</title>
       <!-- Font here -->
       <link href="https://goo.gl/TRlJIe" rel="stylesheet">
       <!-- Link JQuery here -->
