--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
      -->
     <div class="row">
       <div class='col-md-12'>
-        <h1>Epic Quartz Parchment Shears</h1>
+        <h1>Epic Quartz Parchment Shears Duel</h1>
         <p>Welcome to za most epic "Quartz Parchment Shears" in history, wisely select your choice to endure the long journey that awaits you.</p>
+        <br>
         <h1>-- Pick a weapon if you want to live --</h1>
       </div>
     </div>
@@ -54,6 +55,11 @@
     <div class='row'>
       <div class='col-md-12'>
         <input id='input'><button id='select'>Fight!</button>
+      </div>  
+    </div>
+    <div class='row'>
+      <div class='col-md-4' id='results'>
+        
       </div>  
     </div>
   </body>
