--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
       <!-- Link CSS here -->
       <link href='css/style.css' rel='stylesheet'>
+      <!-- Tab icon -->
+      <link rel='icon' href='img/icon.ico'>
   </head>
 
   <body>
@@ -29,6 +31,7 @@
         <h1>Epic Quartz Parchment Shears Duel</h1>
         <p>Welcome to za most epic "Quartz Parchment Shears" in history, wisely select your choice to endure the long journey that awaits you.</p>
         <br>
+        <h1>Glory : - <span id='glory'>0</span> -</h1>
         <h1>-- Pick a weapon if you want to live --</h1>
       </div>
     </div>
@@ -58,8 +61,14 @@
       </div>  
     </div>
     <div class='row'>
+      <div class='col-md-4'>
+        <h1 id='user'></h1>  
+      </div>
       <div class='col-md-4' id='results'>
         
+      </div>
+      <div class='col-md-4'>
+        <h1 id='cpu'></h1>  
       </div>  
     </div>
   </body>
