--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Input -->
     <div class='row'>
       <div class='col-md-12'>
-        <input id='input'><button id='select'>Fight!</button>
+        <input id='input' placeholder='Player'><button id='select'>Fight!</button>
       </div>  
     </div>
     <div class='row'>
