--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Epic Quartz Parchment Shears Duel</h1>
         <p>Welcome to za most epic "Quartz Parchment Shears" in history, wisely select your choice to endure the long journey that awaits you.</p>
         <br>
-        <h1>Glory : - <span id='glory'>0</span> -</h1>
+        <h1>Glory : | <span id='glory'>0</span> |</h1>
         <h1>-- Pick a weapon if you want to live --</h1>
       </div>
     </div>
